<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rateMovie"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="24dp"
        android:onClick="rateMovie"
        android:text="@string/rate"
        app:layout_constraintBottom_toTopOf="@+id/admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/admin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="155dp"
        android:onClick="adminLogIn"
        android:text="@string/admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateMovie" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="28dp"
        android:onClick="logIn"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/rateMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAcct" />

    <Button
        android:id="@+id/createAcct"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="28dp"
        android:onClick="createAccount"
        android:text="@string/create_acct"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="138dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createAcct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>