<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminLog">

    <TextView
        android:id="@+id/admin_log_prompt"
        android:layout_width="215dp"
        android:layout_height="128dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="47dp"
        android:text="@string/admin_log_prompt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/admin_log_butt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/admin_log_butt1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="16dp"
        android:onClick="addMovie"
        android:text="@string/admin_log_option1"
        app:layout_constraintBottom_toTopOf="@+id/deleteButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_log_prompt" />

    <Button
        android:id="@+id/admin_log_butt2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="16dp"
        android:onClick="viewLog"
        android:text="@string/admin_log_option2"
        app:layout_constraintBottom_toTopOf="@+id/signOutFromAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteButt" />

    <Button
        android:id="@+id/deleteButt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="16dp"
        android:onClick="delete"
        android:text="@string/thanossnap"
        app:layout_constraintBottom_toTopOf="@+id/admin_log_butt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_log_butt1" />

    <Button
        android:id="@+id/signOutFromAdmin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="130dp"
        android:onClick="signout"
        android:text="@string/exitt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_log_butt2" />
</android.support.constraint.ConstraintLayout>