<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rateMovie">

    <TextView
        android:id="@+id/rate_movie_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="181dp"
        android:text="@string/admin_log_prompt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rate_movie_butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rate_movie_butt"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="32dp"
        android:onClick="rateDaMovie"
        android:text="@string/rate_movie"
        app:layout_constraintBottom_toTopOf="@+id/view_profile_butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_movie_prompt" />

    <Button
        android:id="@+id/view_profile_butt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="35dp"
        android:onClick="viewProfile"
        android:text="@string/profile_butt"
        app:layout_constraintBottom_toTopOf="@+id/goHomeFromRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_movie_butt" />

    <Button
        android:id="@+id/goHomeFromRating"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="156dp"
        android:onClick="IWannaGOHOME"
        android:text="@string/homeeee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_butt" />
</android.support.constraint.ConstraintLayout>