<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addMovieActivity">

    <TextView
        android:id="@+id/addMoviePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:layout_marginBottom="47dp"
        android:text="@string/admin_log_option1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movieNameBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/movieNameBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:ems="10"
        android:hint="@string/movie_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/movieDateBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMoviePrompt" />

    <EditText
        android:id="@+id/movieDateBox"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/movie_date"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/movieDescriptionBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieNameBox" />

    <EditText
        android:id="@+id/movieDescriptionBox"
        android:layout_width="200dp"
        android:layout_height="109dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/movie_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/submitMovieButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDateBox" />

    <Button
        android:id="@+id/submitMovieButt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="32dp"
        android:onClick="addMovie"
        android:text="@string/admin_log_option1"
        app:layout_constraintBottom_toTopOf="@+id/menuButtFAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDescriptionBox" />

    <Button
        android:id="@+id/menuButtFAdd"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="109dp"
        android:onClick="goToMenu"
        android:text="@string/thisIsTedious"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitMovieButt" />
</android.support.constraint.ConstraintLayout>