<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteMovieActivity">

    <TextView
        android:id="@+id/deletePrompt"
        android:layout_width="198dp"
        android:layout_height="98dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/movie_option_prompt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deletionSelection"
        app:layout_constraintEnd_toStartOf="@+id/finalDeleteButt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="301dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/active_list"
            android:layout_width="match_parent"
            android:layout_height="597dp"></ListView>
    </LinearLayout>

    <EditText
        android:id="@+id/deletionSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/selection"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/finalDeleteButt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletePrompt" />

    <Button
        android:id="@+id/finalDeleteButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="53dp"
        android:onClick="deleteThisShit"
        android:text="@string/thanossnap"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deletePrompt"
        app:layout_constraintTop_toBottomOf="@+id/menuButtFDelete" />

    <Button
        android:id="@+id/menuButtFDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="goToMenuFromDelete"
        android:text="@string/thisIsTedious"
        app:layout_constraintBottom_toTopOf="@+id/finalDeleteButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deletePrompt"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
